[package]
name = "grin_wallet"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/jojapoppa/lurker-wallet"
keywords = [ "crypto", "grin", "mimblewimble", "lurker" ]
readme = "README.md"
exclude = ["**/*.grin", "**/*.grin2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "grin-wallet"
path = "src/bin/grin-wallet.rs"

[dependencies]
yggdrasilctl = { git = "https://github.com/jojapoppa/yggdrasilctl.git", branch = "main", default-features = false, features = ["use_tokio"] }
yggdrasil-keys = "0.4.0"
randomx-rs = "1.4.1"  # Latest as of 2025
grin_core = { path = "./core" }  # Drops version; uses local path
grin_chain = { path = "./chain" }  # Drops version; uses local path
grin_keychain= { path = "./keychain" }  # Drops version; uses local path
grin_p2p = { path = "./p2p" }  # Drops version; uses local path
grin_pool = { path = "./pool" }  # Drops version; uses local path
grin_servers = { path = "./servers" }  # Drops version; uses local path
grin_store = { path = "./store" }  # Drops version; uses local path
clap = { version = "2.33", features = ["yaml"] }
rpassword = "4.0"
thiserror = "1"
prettytable-rs = "0.10"
log = "0.4"
linefeed = "0.6"
semver = "0.10"
rustyline = "6"
lazy_static = "1"

grin_wallet_api = { path = "../lurker-wallet/api", version = "5.4.0-alpha.1" }
grin_wallet_impls = { path = "../lurker-wallet/impls", version = "5.4.0-alpha.1" }
grin_wallet_libwallet = { path = "../lurker-wallet/libwallet", version = "5.4.0-alpha.1" }
grin_wallet_controller = { path = "../lurker-wallet/controller", version = "5.4.0-alpha.1" }
grin_wallet_config = { path = "../lurker-wallet/config", version = "5.4.0-alpha.1" }
grin_wallet_util = { path = "../lurker-wallet/util", version = "5.4.0-alpha.1" }

[features]
default = []
randomx = []  # Optional feature flag for backward compat

[build-dependencies]
built = { version = "0.7", features = ["git2"]}

[dev-dependencies]
url = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
remove_dir_all = "0.7"
easy-jsonrpc-mw = "0.5.4"
